{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 121,
  "lineage": "cb292edc-56c6-1b88-63c7-1a93f87f3275",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027fdd3f9ebab87e5",
            "association_id": "eipassoc-00c9bc9db000bc796",
            "domain": "vpc",
            "id": "eipalloc-027fdd3f9ebab87e5",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0aa95414003684758",
            "private_dns": "ip-172-20-4-99.eu-west-3.compute.internal",
            "private_ip": "172.20.4.99",
            "public_dns": "ec2-13-36-122-25.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.122.25",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a53a00c9152a5a86",
            "association_id": "eipassoc-0b6ccfeb021ed736e",
            "domain": "vpc",
            "id": "eipalloc-0a53a00c9152a5a86",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0731c3fd4da16e335",
            "private_dns": "ip-172-20-5-177.eu-west-3.compute.internal",
            "private_ip": "172.20.5.177",
            "public_dns": "ec2-35-181-94-122.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.94.122",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:internet-gateway/igw-0f0636e1379e52ce7",
            "id": "igw-0f0636e1379e52ce7",
            "owner_id": "384894877891",
            "vpc_id": "vpc-03903386fba7f6e95"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027fdd3f9ebab87e5",
            "connectivity_type": "public",
            "id": "nat-032d77d18748294bc",
            "network_interface_id": "eni-0aa95414003684758",
            "private_ip": "172.20.4.99",
            "public_ip": "13.36.122.25",
            "subnet_id": "subnet-095212539c8156cf7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a53a00c9152a5a86",
            "connectivity_type": "public",
            "id": "nat-0e58da28cbbb83641",
            "network_interface_id": "eni-0731c3fd4da16e335",
            "private_ip": "172.20.5.177",
            "public_ip": "35.181.94.122",
            "subnet_id": "subnet-0567d6381570ce846"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:route-table/rtb-0faab87bddc285310",
            "id": "rtb-0faab87bddc285310",
            "owner_id": "384894877891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-032d77d18748294bc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03903386fba7f6e95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.default",
            "aws_eip.nat",
            "aws_nat_gateway.default"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:route-table/rtb-0e918844c35795fc8",
            "id": "rtb-0e918844c35795fc8",
            "owner_id": "384894877891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e58da28cbbb83641",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03903386fba7f6e95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.default",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:route-table/rtb-085f1b81c8cfc0b8b",
            "id": "rtb-085f1b81c8cfc0b8b",
            "owner_id": "384894877891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0636e1379e52ce7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03903386fba7f6e95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eab39fbaf3a13b5b",
            "route_table_id": "rtb-0faab87bddc285310",
            "subnet_id": "subnet-014b0dfe146d36a46"
          },
          "dependencies": [
            "aws_nat_gateway.default",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "aws_eip.nat"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075a33e99fd3ee091",
            "route_table_id": "rtb-0e918844c35795fc8",
            "subnet_id": "subnet-084ea1fbd43232a1e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.default",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011e94423b1a12d3a",
            "route_table_id": "rtb-085f1b81c8cfc0b8b",
            "subnet_id": "subnet-095212539c8156cf7"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.default",
            "aws_internet_gateway.default",
            "aws_route_table.public"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8b9ee03191369fe",
            "route_table_id": "rtb-085f1b81c8cfc0b8b",
            "subnet_id": "subnet-0567d6381570ce846"
          },
          "dependencies": [
            "aws_vpc.default",
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:security-group/sg-019af05d64c38ef28",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a20809ca737a0739"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019af05d64c38ef28",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "384894877891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03903386fba7f6e95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.EC2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:security-group/sg-0a20809ca737a0739",
            "description": "Logical EC2 Instance Grouping",
            "egress": [],
            "id": "sg-0a20809ca737a0739",
            "ingress": [],
            "name": "EC2 Instances",
            "name_prefix": "",
            "owner_id": "384894877891",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2 Instances"
            },
            "tags_all": {
              "Name": "EC2 Instances"
            },
            "timeouts": null,
            "vpc_id": "vpc-03903386fba7f6e95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:subnet/subnet-014b0dfe146d36a46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014b0dfe146d36a46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384894877891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-03903386fba7f6e95"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:subnet/subnet-084ea1fbd43232a1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.20.7.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084ea1fbd43232a1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384894877891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-03903386fba7f6e95"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-west-3a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:subnet/subnet-095212539c8156cf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095212539c8156cf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384894877891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-03903386fba7f6e95"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": "eu-west-3b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:subnet/subnet-0567d6381570ce846",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0567d6381570ce846",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384894877891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-03903386fba7f6e95"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:vpc/vpc-03903386fba7f6e95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/21",
            "default_network_acl_id": "acl-0c135873ca46d829a",
            "default_route_table_id": "rtb-039391fe6755f0628",
            "default_security_group_id": "sg-06c9c81387faf2ff3",
            "dhcp_options_id": "dopt-824186eb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03903386fba7f6e95",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-039391fe6755f0628",
            "owner_id": "384894877891",
            "tags": {
              "Name": "sergio-test"
            },
            "tags_all": {
              "Name": "sergio-test"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:384894877891:vpc-endpoint/vpce-06866bd4f3cc74816",
            "cidr_blocks": [
              "3.5.224.0/22",
              "52.95.154.0/23",
              "52.95.156.0/24"
            ],
            "id": "vpce-06866bd4f3cc74816",
            "owner_id": "384894877891",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-23ad484a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0e918844c35795fc8",
              "rtb-0faab87bddc285310"
            ],
            "service_name": "com.amazonaws.eu-west-3.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-03903386fba7f6e95"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    }
  ]
}